; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/ndis/extr_subr_ntoskrnl.c_IoCancelIrp.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/ndis/extr_subr_ntoskrnl.c_IoCancelIrp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, i32 }
%struct.TYPE_9__ = type { i32 }

@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IoCancelIrp(%struct.TYPE_8__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_8__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %3, align 8
  %6 = call i32 @IoAcquireCancelSpinLock(i32* %5)
  %7 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %8 = call i32* @IoSetCancelRoutine(%struct.TYPE_8__* %7, i32* null)
  store i32* %8, i32** %4, align 8
  %9 = load i32, i32* @TRUE, align 4
  %10 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 4
  %12 = load i32*, i32** %4, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %18

14:                                               ; preds = %1
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @IoReleaseCancelSpinLock(i32 %15)
  %17 = load i32, i32* @FALSE, align 4
  store i32 %17, i32* %2, align 4
  br label %32

18:                                               ; preds = %1
  %19 = load i32, i32* %5, align 4
  %20 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 4
  %22 = load i32*, i32** %4, align 8
  %23 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %24 = call %struct.TYPE_9__* @IoGetCurrentIrpStackLocation(%struct.TYPE_8__* %23)
  %25 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %28 = call i32 @MSCALL2(i32* %22, i32 %26, %struct.TYPE_8__* %27)
  %29 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %30 = load i32, i32* @TRUE, align 4
  %31 = call i32 @IoSetCancelValue(%struct.TYPE_8__* %29, i32 %30)
  store i32 %31, i32* %2, align 4
  br label %32

32:                                               ; preds = %18, %14
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i32 @IoAcquireCancelSpinLock(i32*) #1

declare dso_local i32* @IoSetCancelRoutine(%struct.TYPE_8__*, i32*) #1

declare dso_local i32 @IoReleaseCancelSpinLock(i32) #1

declare dso_local i32 @MSCALL2(i32*, i32, %struct.TYPE_8__*) #1

declare dso_local %struct.TYPE_9__* @IoGetCurrentIrpStackLocation(%struct.TYPE_8__*) #1

declare dso_local i32 @IoSetCancelValue(%struct.TYPE_8__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
